language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_function_which_uses_no_extracted_variables.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn do_things(a, b) {\n  let x = a + b\n  echo x\n  a\n}\n"
---
----- BEFORE ACTION

pub fn do_things(a, b) {
  let x = a + b
  ▔▔▔▔▔▔▔▔▔▔▔▔▔
  echo x
▔▔↑     
  a
}


----- AFTER ACTION

pub fn do_things(a, b) {
  function(a, b)
  a
}

fn function(a: Int, b: Int) -> Int {
  let x = a + b
  echo x
}
