language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_function_with_selected_expression_in_statement.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn do_things(a, b) {\n  let result = call(a, [])\n  result + 3\n}\n"
---
----- BEFORE ACTION

pub fn do_things(a, b) {
  let result = call(a, [])
               ▔▔▔▔▔▔▔▔↑  
  result + 3
}


----- AFTER ACTION

pub fn do_things(a, b) {
  let result = function(a)
  result + 3
}

fn function(a: a) -> Int {
  call(a, [])
}
