language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_function_with_selected_pipeline_expression_in_statement.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn do_things(a, b) {\n  let result =\n    wibble\n    |> wobble\n    |> woo\n\n  result + 3\n}\n"
---
----- BEFORE ACTION

pub fn do_things(a, b) {
  let result =
    wibble
    ▔▔▔▔▔▔
    |> wobble
▔▔▔▔▔▔▔▔▔▔▔▔▔
    |> woo
▔▔▔▔▔▔▔↑  

  result + 3
}


----- AFTER ACTION

pub fn do_things(a, b) {
  let result =
    function()

  result + 3
}

fn function() -> Int {
  wibble
    |> wobble
    |> woo
}
