language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_starting_steps_of_pipeline_with_argument.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  let something = 1\n\n  True\n  |> wibble(something)\n  |> wobble\n}\n\nfn wibble(_, _) { 1 }\nfn wobble(_) { 1.0 }\n"
---
----- BEFORE ACTION

pub fn main() {
  let something = 1

  True
  ▔▔▔▔
  |> wibble(something)
▔▔▔▔▔↑                
  |> wobble
}

fn wibble(_, _) { 1 }
fn wobble(_) { 1.0 }


----- AFTER ACTION

pub fn main() {
  let something = 1

  function(something)
  |> wobble
}

fn function(something: Int) -> Int {
  True
  |> wibble(something)
}

fn wibble(_, _) { 1 }
fn wobble(_) { 1.0 }
